--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Voyage-d-une-Parisienne-dans-l-Himalaya-occidental_71737
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 71737-h/images/backcover.jpg
 creator:
   author:
     agent_name: Ujfalvy-Bourdon, Marie
     gutenberg_agent_id: '56369'
     url: http://www.gutenberg.org/2009/agents/56369
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/71737#Voyage-d-une-Parisienne-dans-l-Himalaya-occidental
 gutenberg_issued: '2023-09-27'
 identifiers:
   gutenberg: '71737'
